# ormai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  specs.md  specs1.md  specs2.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
docs/: ormai-ts-specification.md  pydanticai-comparison.md  quickstart.md  roadmap.md  specification.md  utilities-pack.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/api-reference/: adapters.md  core.md  mcp.md  policy.md  store.md  tools.md
documentation/docs/concepts/: adapters.md  audit-logging.md  overview.md  policies.md  tools.md  views.md
documentation/docs/getting-started/: first-steps.md  installation.md  quickstart.md
documentation/docs/guides/: code-generation.md  custom-tools.md  evaluation.md  multi-tenant.md  write-operations.md
documentation/docs/integrations/: fastapi.md  langgraph.md  typescript.md
examples/: spider_demo.py
examples/.spider2_data/spider2-lite/: spider2-lite.jsonl
examples/fastapi-sqlalchemy/: README.md  pyproject.toml
examples/fastapi-sqlalchemy/app/: __init__.py  database.py  main.py  models.py  ormai_setup.py
ormai-ts/: README.md  package-lock.json  package.json  tsconfig.json
ormai-ts/src/: index.ts
ormai-ts/src/adapters/: base.ts
ormai-ts/src/adapters/drizzle/: adapter.ts  compiler.ts
ormai-ts/src/adapters/prisma/: adapter.ts  compiler.ts  index.ts
ormai-ts/src/adapters/typeorm/: adapter.ts  compiler.ts
ormai-ts/src/core/: context.ts  dsl.ts  errors.ts  index.ts  types.ts
ormai-ts/src/integrations/: json-schema.ts  vercel-ai.ts
ormai-ts/src/mcp/: server.ts
ormai-ts/src/policy/: engine.ts  index.ts  models.ts
ormai-ts/src/store/: base.ts  jsonl.ts  memory.ts  models.ts
ormai-ts/src/tools/: generic.ts  index.ts
ormai-ts/src/utils/: defaults.ts  factory.ts  index.ts
ormai-ts/tests/adapters/: drizzle.test.ts  prisma.test.ts  typeorm.test.ts
ormai-ts/tests/core/: errors.test.ts
ormai-ts/tests/policy/: budgets.test.ts  engine.test.ts  models.test.ts  scoping.test.ts
ormai-ts/tests/tools/: base.test.ts  generic.test.ts
ormai-ts/tests/utils/: builder.test.ts  defaults.test.ts
src/ormai/: __init__.py
src/ormai/adapters/: __init__.py  base.py
src/ormai/adapters/django/: __init__.py  adapter.py  introspection.py
src/ormai/adapters/peewee/: __init__.py  adapter.py  compiler.py  introspection.py  mutations.py
src/ormai/adapters/sqlalchemy/: __init__.py  adapter.py  compiler.py  introspection.py  mutations.py  queries.py  session.py
src/ormai/adapters/sqlmodel/: __init__.py  adapter.py
src/ormai/adapters/tortoise/: __init__.py  adapter.py  compiler.py  introspection.py  mutations.py
src/ormai/codegen/: __init__.py  generator.py  tools.py  views.py
src/ormai/control_plane/: __init__.py  aggregator.py  client.py  models.py  registry.py  server.py
src/ormai/core/: __init__.py  context.py  cursor.py  dsl.py  errors.py  types.py
src/ormai/eval/: __init__.py  harness.py  recorder.py  replay.py
src/ormai/health/: __init__.py  checks.py
src/ormai/integrations/: __init__.py  fastapi.py  langgraph.py
src/ormai/logging/: __init__.py  config.py  context.py  formatters.py
src/ormai/mcp/: __init__.py  config.py  server.py
src/ormai/middleware/: __init__.py  rate_limit.py
src/ormai/policy/: __init__.py  budgets.py  costs.py  engine.py  models.py  redaction.py  scoping.py  validation.py
src/ormai/quickstart/: __init__.py  django.py  peewee.py  sqlalchemy.py  sqlmodel.py  tortoise.py
src/ormai/store/: __init__.py  base.py  django.py  jsonl.py  middleware.py  models.py  peewee.py  retention.py  sanitize.py  sqlalchemy.py  tortoise.py
src/ormai/tools/: __init__.py  base.py  deferred.py  generic.py  registry.py
src/ormai/utils/: __init__.py  approval.py  builder.py  cache.py  defaults.py  factory.py  plugins.py  testing.py  transaction.py
src/ormai/views/: __init__.py  base.py  factory.py
tests/: __init__.py  conftest.py
tests/test_adapters/: __init__.py  test_django.py  test_peewee.py  test_sqlalchemy.py  test_sqlmodel.py  test_tortoise.py
tests/test_codegen/: __init__.py  test_generators.py
tests/test_control_plane/: __init__.py  test_aggregator.py  test_client.py  test_registry.py  test_server.py
tests/test_core/: test_context.py  test_cursor.py  test_dsl.py  test_mutations.py
tests/test_eval/: test_harness.py
tests/test_integration/: __init__.py  test_full_flows.py
tests/test_mcp/: test_config.py  test_server.py
tests/test_performance/: test_adapter_performance.py
tests/test_policy/: __init__.py  test_costs.py  test_engine.py  test_redaction.py
tests/test_property/: __init__.py  test_dsl.py
tests/test_quickstart/: __init__.py  test_quickstart.py
tests/test_store/: test_middleware.py  test_sanitize.py  test_sql_stores.py
tests/test_tools/: test_deferred.py
tests/test_utils/: test_approval.py  test_builder.py  test_persistent_cache.py  test_plugins.py  test_testing.py  test_transaction.py
