[project]
name = "ormai"
version = "0.1.0"
description = "ORM-native capability runtime for safe, typed, auditable agent database access"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "OrmAI Contributors" }
]
keywords = ["orm", "ai", "agents", "sqlalchemy", "mcp", "llm", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0,<3.0",
    "greenlet>=3.0",  # For SQLAlchemy async
]
tortoise = [
    "tortoise-orm>=0.20",
]
peewee = [
    "peewee>=3.17",
]
mcp = [
    "mcp>=1.0",
]
all = [
    "ormai[sqlalchemy,tortoise,peewee,mcp]",
]

[project.urls]
Homepage = "https://github.com/anthropics/ormai"
Documentation = "https://github.com/anthropics/ormai#readme"
Repository = "https://github.com/anthropics/ormai"
Issues = "https://github.com/anthropics/ormai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ormai"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "sqlalchemy>=2.0",  # For testing
    "greenlet>=3.0",  # For SQLAlchemy async
    "aiosqlite>=0.20",  # For async SQLite testing
    "httpx>=0.27",  # For testing HTTP clients
    "fastapi>=0.115",  # For example app
    "uvicorn>=0.32",  # For example app
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["ormai"]

[tool.coverage.run]
source = ["src/ormai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
