[project]
name = "ormai-fastapi-example"
version = "0.1.0"
description = "FastAPI + SQLAlchemy example for OrmAI"
requires-python = ">=3.10"
dependencies = [
    "ormai[sqlalchemy]",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "aiosqlite>=0.20",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
